--- a/.github/workflows/brew-update.yml
+++ b/.github/workflows/brew-update.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          brew bump-cask-pr --no-browse --strict --write --commit ab-download-manager
+          brew bump-cask-pr --no-browse --write-only --commit ab-download-manager
       
       - name: Push changes
         run: |
