Disable Brew update and audit in workflow
Comment out Brew update and audit steps in workflow

--- a/.github/workflows/brew-update.yml
+++ b/.github/workflows/brew-update.yml
@@ -25,11 +25,11 @@ jobs:
           fi
           brew --version
 
-      - name: Brew update
-        run: brew update
+      #- name: Brew update
+      #  run: brew update
 
-      - name: (Optional) Audit current cask quickly
-        run: brew audit --cask --strict --online ./Casks/ab-download-manager.rb || true
+      #- name: (Optional) Audit current cask quickly
+      #  run: brew audit --cask --strict --online ./Casks/ab-download-manager.rb || true
 
       - name: Livecheck to see if newer exists
         run: |
