Set HOMEBREW_GITHUB_API_TOKEN in brew-update workflow
Add HOMEBREW_GITHUB_API_TOKEN to environment variables

--- a/.github/workflows/brew-update.yml
+++ b/.github/workflows/brew-update.yml
@@ -12,7 +12,8 @@ permissions:
 jobs:
   bump:
     runs-on: macos-latest
-
+    env:
+      HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout tap repo
         uses: actions/checkout@v4
