--- a/.github/workflows/brew-update.yml
+++ b/.github/workflows/brew-update.yml
@@ -37,7 +37,11 @@ jobs:
           brew tap CoZooo/tap
           RAW="$(brew livecheck --cask --newer-only ab-download-manager || true)"
           echo "LIVE: $RAW"
-          NEW_VER="$(printf "%s" "$RAW" | sed -nE 's/.*==>\s*([0-9][0-9A-Za-z._-]*).*/\1/p')"
+          RAW_CLEAN="$(printf "%s" "$RAW" | sed -E 's/\x1B\[[0-9;]*[A-Za-z]//g')"
+              NEW_VER="$(printf "%s" "$RAW_CLEAN" \
+                | grep -oE '==>\s*[0-9A-Za-z._-]+' \
+                | awk '{print $2}' \
+                | tail -n1)"
           if [ -z "$NEW_VER" ]; then
             echo "No newer version found. Skip bump."
             echo "newver=" >> "$GITHUB_OUTPUT"
