--- a/.github/workflows/brew-update.yml
+++ b/.github/workflows/brew-update.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - name: Checkout tap repo
         uses: actions/checkout@v4
+        with:
+          ref: main
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Ensure Homebrew is available
         run: |
